added header, footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio Tetiana Bedina</title>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -14,7 +17,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,15 +27,76 @@
       src="https://kit.fontawesome.com/18fd7dc14d.js"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio Tetiana Bedina</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
+    <header>
+      <div class="header">
+        <nav class="navbar navbar-expand-lg bg-primary fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Tetiana Bedina</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="#"
+                    title="Back to homepage"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="about.html"
+                    title="Information about me"
+                    >About me</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html#email" title="My works"
+                    >My work</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="about.html#email"
+                    title="You can email me"
+                    >Contact me</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
     <div class="container">
       <h1>Tetiana Bedina</h1>
-      <p>Hello</p>
-      <i class="fa-solid fa-briefcase"></i>
+      <p>Design engineer, front-end development based in Ukraine(Kyiv)</p>
+      <a href="" class="btn btn-primary" id="button-my-resume">My resume</a>
+      <a href="" class="btn btn-primary" id="button-contact-me">Contact me</a>
     </div>
+    <footer>
+      <nav class="navbar fixed-bottom navbar-light bg-primary">
+        <span class="navbar-text"
+          >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
+        >
+      </nav>
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
