--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
     </header>
     <div class="container">
       <h1>Tetiana Bedina</h1>
-      <p>Design engineer, front-end development based in Ukraine(Kyiv)</p>
-      <a href="" class="btn btn-primary" id="button-my-resume">My resume</a>
-      <a href="" class="btn btn-primary" id="button-contact-me">Contact me</a>
+      <p>Frontend development based in Ukraine(Kyiv)</p>
+      <div class="button">
+        <a href="" class="btn btn-primary" id="button__resume">My resume</a>
+        <a href="" class="btn btn-primary" id="button__contact">Contact me</a>
+      </div>
     </div>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
