Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -84,13 +84,78 @@
         </nav>
       </div>
     </header>
-    <div class="container">
-      <h1>Tetiana Bedina</h1>
+    <div class="data">
+      <h1 id="name">Tetiana Bedina</h1>
       <p>Frontend development based in Ukraine(Kyiv)</p>
       <div class="button">
         <a href="" class="btn btn-primary" id="button__resume">My resume</a>
         <a href="" class="btn btn-primary" id="button__contact">Contact me</a>
       </div>
+    </div>
+    <div class="projects">
+      <div class="columns">
+          <div class="container">
+            <div class="columns-title"><h2> Take a look at what I've been working on during my training!</h2></div>
+            <div class="row">
+              <div class="col d-none d-md-block">                
+                <div class="image">
+                  <img src="img/TravelProject2.jpg" alt=""  class="img-fluid"/>
+                </div>    
+              </div>         
+              <div class="col">
+                <div class="project-description">
+                      <div class="item__title">
+                        <h2>Travel project</h2> 
+                      </div>
+                      <div class="text">
+                        <p>
+                        
+Travel project is a discussion about the purpose of travel. If it makes you want to travel right now, don't hold back. Enjoy an unforgettable moment.</p>
+                      </div>
+                      <a href="https://jazzy-froyo-441b8a.netlify.app/" class="btn btn-branding-outline">View detail project</a>
+                </div>      
+              </div>
+            </div>
+            <div class="row">
+              <div class="col d-none d-md-block">                
+                <div class="image">
+                  <img src="img/WeatherProject.jpg" alt=""  class="img-fluid"/>
+                </div>    
+              </div>         
+              <div class="col">
+                <div class="project-description">
+                      <div class="item__title">
+                        <h2>Weather project</h2> 
+                      </div>
+                      <div class="text">
+                        <p>
+                        The Weather project shows the current weather in your chosen city, the forecast for the next 5 days. It is possible to convert units from degrees to Fahrenheit and vice versa. You can also select the current location and the weather will be displayed for the city where you are.
+</p>
+                      </div>
+                      <a href="https://splendid-croquembouche-c989f0.netlify.app/" class="btn btn-branding-outline">View detail project</a>
+                </div>      
+              </div>
+            </div>
+            <div class="row">
+              <div class="col d-none d-md-block">                
+                <div class="image">
+                  <img src="img/CroissantProject.jpg" alt=""  class="img-fluid"/>
+                </div>    
+              </div>         
+              <div class="col">
+                <div class="project-description">
+                      <div class="item__title">
+                        <h2>Croissant project</h2> 
+                      </div>
+                      <div class="text">
+                        <p>
+                        The Croissant project demonstrates a recipe for homemade croissants. The recipe is detailed and contains photographic materials. On the contact page you can order fresh croissants
+</p>
+                      </div>
+                      <a href="https://lovely-tulumba-eb6e52.netlify.app/" class="btn btn-branding-outline">View detail project</a>
+                </div>      
+              </div>
+            </div>             
     </div>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
