--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="projects">
       <div class="columns">
           <div class="container">
-            <div class="columns-title"><h2> Take a look at what I've been working on during my training!</h2></div>
+            <div class="columns-title"> Take a look at what I've been working on during my training!</div>
             <div class="row">
               <div class="col d-none d-md-block">                
                 <div class="image">
