added about html, moved project from index to work,

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Tetiana Bedina</title>
+    <title>About me</title>
 
     <link
       rel="stylesheet"
@@ -50,16 +50,16 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a
-                    class="nav-link active"
+                    class="nav-link"
                     aria-current="page"
-                    href="#"
+                    href="index.html"
                     title="Back to homepage"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
                   <a
-                    class="nav-link"
+                    class="nav-link active"
                     href="about.html"
                     title="Information about me"
                     >About me</a
@@ -85,13 +85,22 @@
       </div>
     </header>
     <div class="data">
-      <h1 id="name">Tetiana Bedina</h1>
-      <p>Frontend development, based in Ukraine(Kyiv)</p>
-      <div class="button">
-        <a href="" class="btn btn-primary" id="button__resume">My resume</a>
-        <a href="contact.html" class="btn btn-primary" id="button__contact"
-          >Contact me</a
-        >
+      <h1 id="name">About me</h1>
+    </div>
+    <div class="row">
+      <div class="col-lg-5">
+        <img src="img/my photo.jpg" class="images-fluid" id="photo" alt="" />
+      </div>
+      <div class="col-lg-5" id="info-about-me">
+        <h2>Tetiana Bedina</h2>
+        <p>
+          Design engineer, frontend development. I am currently finishing 3
+          SheCodes courses and intend to study the fourth one. Looking forward
+          to trying my hand at an interesting commercial project
+        </p>
+        <a href="work.html" class="btn btn-branding-outline"
+          >Look at my work
+        </a>
       </div>
     </div>
 
