--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Tetiana Bedina</title>
+    <title>Contact</title>
 
     <link
       rel="stylesheet"
@@ -50,9 +50,9 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a
-                    class="nav-link active"
+                    class="nav-link"
                     aria-current="page"
-                    href="#"
+                    href="index.html"
                     title="Back to homepage"
                     >Home</a
                   >
@@ -72,7 +72,7 @@
                 </li>
                 <li class="nav-item">
                   <a
-                    class="nav-link"
+                    class="nav-link active"
                     href="contact.html"
                     title="You can email me"
                     >Contact me</a
@@ -85,14 +85,7 @@
       </div>
     </header>
     <div class="data">
-      <h1 id="name">Tetiana Bedina</h1>
-      <p>Frontend development, based in Ukraine(Kyiv)</p>
-      <div class="button">
-        <a href="" class="btn btn-primary" id="button__resume">My resume</a>
-        <a href="contact.html" class="btn btn-primary" id="button__contact"
-          >Contact me</a
-        >
-      </div>
+      <h1 id="name">Contact me</h1>
     </div>
 
     <footer>
