changed some margin

--- a/work.html
+++ b/work.html
@@ -91,7 +91,9 @@
       <div class="columns">
         <div class="container">
           <div class="columns-title">
-            <p>Take a look at what I've been working on during my training!</p>
+            <h2>
+              Take a look at what I've been working on during my training!👩‍💻
+            </h2>
           </div>
           <div class="row">
             <div class="col d-none d-md-block">
