Added contact page info

--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,22 @@
         </nav>
       </div>
     </header>
-    <div class="data">
-      <h1 id="name">Contact me</h1>
+    <div class="container">
+      <div class="data">
+        <h1 id="name">Contact me</h1>
+      </div>
+      <div class="contact text-start" id="contact-info">
+        <h3><strong> Email</strong></h3>
+        <p id="email">
+          <a href="mailto:tibedina@gmail.com">tibedina@gmail.com</a>
+        </p>
+        <h3><strong>Linkedin</strong></h3>
+        <p id="linkedin">
+          <a href="https://www.linkedin.com/in/bedina-tetiana">My linkedin</a>
+        </p>
+        <hr />
+        <h3><strong>Let's be in touch</strong></h3>
+      </div>
     </div>
 
     <footer>
