--- a/work.html
+++ b/work.html
@@ -92,7 +92,7 @@
         <div class="container">
           <div class="columns-title">
             <h2>
-              Take a look at what I've been working on during my training!👩‍💻
+              Take a look at what I've been working on during my training!👇
             </h2>
           </div>
           <div class="row">
