--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,11 @@
         </p>
         <h3><strong>Linkedin</strong></h3>
         <p id="linkedin">
-          <a href="https://www.linkedin.com/in/bedina-tetiana">My linkedin</a>
+          <a href="https://www.linkedin.com/in/bedina-tetiana">My Linkedin</a>
+        </p>
+        <h3><strong>GitHub</strong></h3>
+        <p id="gitHub">
+          <a href="https://github.com/BeTetiana?tab=repositories">My GitHub</a>
         </p>
         <hr />
         <h3><strong>Let's be in touch</strong></h3>
@@ -104,7 +108,7 @@
 
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
-        <span class="navbar-text"
+        <span class="navbar-text" id="footer"
           >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
         >
       </nav>
