--- a/work.html
+++ b/work.html
@@ -181,7 +181,7 @@
     </div>
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
-        <span class="navbar-text"
+        <span class="navbar-text" id="footer"
           >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
         >
       </nav>
