--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Tetiana is a front-end engineer based in Ukraine."
+    />
     <title>Portfolio Tetiana Bedina</title>
 
     <link
@@ -34,7 +38,9 @@
       <div class="header">
         <nav class="navbar navbar-expand-lg bg-primary fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tetiana Bedina</a>
+            <a class="navbar-brand" href="#" title="Hello everyone👋"
+              >Tetiana Bedina</a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -74,7 +80,8 @@
                   <a
                     class="nav-link"
                     href="contact.html"
-                    title="You can email me"
+                    title="My contact information
+"
                     >Contact me</a
                   >
                 </li>
@@ -88,8 +95,18 @@
       <h1 id="name">Tetiana Bedina</h1>
       <p>Frontend development, based in Ukraine(Kyiv)</p>
       <div class="button">
-        <a href="" class="btn btn-primary" id="button__resume">My resume</a>
-        <a href="contact.html" class="btn btn-primary" id="button__contact"
+        <a
+          href=""
+          class="btn btn-primary"
+          title="Here you can find my CV"
+          id="button__resume"
+          >My resume</a
+        >
+        <a
+          href="contact.html"
+          class="btn btn-primary"
+          title="Here you can contact me"
+          id="button__contact"
           >Contact me</a
         >
       </div>
@@ -98,7 +115,10 @@
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
         <span class="navbar-text" id="footer"
-          >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
+          >Coded by Tetiana Bedina
+          <a href="mailto:tibedina@gmail.com" title="Here is my email"
+            >tibedina@gmail.com</a
+          ></span
         >
       </nav>
     </footer>
