--- a/work.html
+++ b/work.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Examples of my projects that I worked on during the course."
+    />
     <title>My work</title>
 
     <link
@@ -34,7 +38,9 @@
       <div class="header">
         <nav class="navbar navbar-expand-lg bg-primary fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tetiana Bedina</a>
+            <a class="navbar-brand" href="#" title="Hello everyone👋"
+              >Tetiana Bedina</a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -74,7 +80,7 @@
                   <a
                     class="nav-link"
                     href="contact.html"
-                    title="You can email me"
+                    title="My contact information"
                     >Contact me</a
                   >
                 </li>
@@ -98,7 +104,11 @@
           <div class="row">
             <div class="col d-none d-md-block">
               <div class="image">
-                <img src="img/TravelProject2.jpg" alt="" class="img-fluid" />
+                <img
+                  src="img/TravelProject2.jpg"
+                  alt="Photo of my first travel project"
+                  class="img-fluid"
+                />
               </div>
             </div>
             <div class="col">
@@ -116,6 +126,7 @@
                 <a
                   href="https://jazzy-froyo-441b8a.netlify.app/"
                   class="btn btn-branding-outline"
+                  title="You can learn more about my project here"
                   >View detail project</a
                 >
               </div>
@@ -124,7 +135,12 @@
           <div class="row">
             <div class="col d-none d-md-block">
               <div class="image">
-                <img src="img/WeatherProject.jpg" alt="" class="img-fluid" />
+                <img
+                  src="img/WeatherProject.jpg"
+                  alt="Photo of my weather forecast project
+"
+                  class="img-fluid"
+                />
               </div>
             </div>
             <div class="col">
@@ -144,6 +160,7 @@
                 <a
                   href="https://splendid-croquembouche-c989f0.netlify.app/"
                   class="btn btn-branding-outline"
+                  title="You can learn more about my project here"
                   >View detail project</a
                 >
               </div>
@@ -152,7 +169,12 @@
           <div class="row">
             <div class="col d-none d-md-block">
               <div class="image">
-                <img src="img/CroissantProject.jpg" alt="" class="img-fluid" />
+                <img
+                  src="img/CroissantProject.jpg"
+                  alt="Photo of my project croissant recipe
+"
+                  class="img-fluid"
+                />
               </div>
             </div>
             <div class="col">
@@ -171,6 +193,7 @@
                 <a
                   href="https://lovely-tulumba-eb6e52.netlify.app/"
                   class="btn btn-branding-outline"
+                  title="You can learn more about my project here"
                   >View detail project</a
                 >
               </div>
@@ -182,7 +205,11 @@
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
         <span class="navbar-text" id="footer"
-          >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
+          >Coded by Tetiana Bedina<a
+            href="mailto:tibedina@gmail.com"
+            title="Here is my email"
+            >tibedina@gmail.com</a
+          ></span
         >
       </nav>
     </footer>
