--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Information about me." />
     <title>About me</title>
 
     <link
@@ -34,7 +35,9 @@
       <div class="header">
         <nav class="navbar navbar-expand-lg bg-primary fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tetiana Bedina</a>
+            <a class="navbar-brand" href="#" title="Hello everyone👋"
+              >Tetiana Bedina</a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -74,7 +77,7 @@
                   <a
                     class="nav-link"
                     href="contact.html"
-                    title="You can email me"
+                    title="My contact information"
                     >Contact me</a
                   >
                 </li>
@@ -89,7 +92,13 @@
     </div>
     <div class="row">
       <div class="col-lg-5">
-        <img src="img/my photo.jpg" class="images-fluid" id="photo" alt="" />
+        <img
+          src="img/my photo.jpg"
+          class="images-fluid"
+          id="photo"
+          alt="My Photo
+"
+        />
       </div>
       <div class="col-lg-5" id="info-about-me">
         <h2>Tetiana Bedina</h2>
@@ -98,8 +107,11 @@
           SheCodes courses and intend to study the fourth one. Looking forward
           to trying my hand at an interesting commercial project
         </p>
-        <a href="work.html" class="btn btn-branding-outline"
-          >Look at my work
+        <a
+          href="work.html"
+          class="btn btn-branding-outline"
+          title="You can see the projects I've worked on here."
+          >Look at my project
         </a>
       </div>
     </div>
@@ -107,7 +119,10 @@
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
         <span class="navbar-text" id="footer"
-          >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
+          >Coded by Tetiana Bedina
+          <a href="mailto:tibedina@gmail.com" title="Here is my email"
+            >tibedina@gmail.com</a
+          ></span
         >
       </nav>
     </footer>
