--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="So you can contact meю" />
     <title>Contact</title>
 
     <link
@@ -34,7 +35,9 @@
       <div class="header">
         <nav class="navbar navbar-expand-lg bg-primary fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tetiana Bedina</a>
+            <a class="navbar-brand" href="#" title="Hello everyone👋"
+              >Tetiana Bedina</a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -74,7 +77,7 @@
                   <a
                     class="nav-link active"
                     href="contact.html"
-                    title="You can email me"
+                    title="My contact information"
                     >Contact me</a
                   >
                 </li>
@@ -84,32 +87,34 @@
         </nav>
       </div>
     </header>
-    <div class="container">
-      <div class="data">
-        <h1 id="name">Contact me</h1>
-      </div>
-      <div class="contact text-start" id="contact-info">
-        <h3><strong> Email</strong></h3>
-        <p id="email">
-          <a href="mailto:tibedina@gmail.com">tibedina@gmail.com</a>
-        </p>
-        <h3><strong>Linkedin</strong></h3>
-        <p id="linkedin">
-          <a href="https://www.linkedin.com/in/bedina-tetiana">My Linkedin</a>
-        </p>
-        <h3><strong>GitHub</strong></h3>
-        <p id="gitHub">
-          <a href="https://github.com/BeTetiana?tab=repositories">My GitHub</a>
-        </p>
-        <hr />
-        <h3><strong>Let's be in touch</strong></h3>
-      </div>
+
+    <div class="data">
+      <h1 id="name">Contact me</h1>
+    </div>
+    <div class="contact text-start" id="contact-info" title="My email">
+      <h3><strong> Email</strong></h3>
+      <p id="email">
+        <a href="mailto:tibedina@gmail.com">tibedina@gmail.com</a>
+      </p>
+      <h3><strong>Linkedin</strong></h3>
+      <p id="linkedin" title="My Linkedin">
+        <a href="https://www.linkedin.com/in/bedina-tetiana">My Linkedin</a>
+      </p>
+      <h3><strong>GitHub</strong></h3>
+      <p id="gitHub" title="My GitHub">
+        <a href="https://github.com/BeTetiana?tab=repositories">My GitHub</a>
+      </p>
+      <hr />
+      <h3><strong>Let's be in touch</strong></h3>
     </div>
 
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-primary">
         <span class="navbar-text" id="footer"
-          >Coded by <a href="mailto:tibedina@gmail.com">Tetiana Bedina</a></span
+          >Coded by Tetiana Bedina
+          <a href="mailto:tibedina@gmail.com" title="Here is my email"
+            >tibedina@gmail.com</a
+          ></span
         >
       </nav>
     </footer>
